add name in survey

--- a/common/models/project.json
+++ b/common/models/project.json
@@ -46,6 +46,10 @@
     },
     "note": {
       "type": "string"
+    },
+    "imageDisplay": {
+      "type": "string",
+      "required": true
     }
   },
   "validations": [],
