--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.5.2",
     "express-session": "^1.15.6",
+    "flatted": "^2.0.0",
     "helmet": "^3.10.0",
+    "js-sha256": "^0.9.0",
     "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
